--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,21 @@
 {
+    "version": 2,
+    "builds": [
+      { 
+        "src": "src/main.ts", 
+        "use": "@vercel/node"
+      }
+    ],
     "routes": [
-      { "src": "/[^.]+", "dist": "/", "status": 200 }
+        {
+            "src": "/(.*)",
+            "dest": "src/main.ts",
+            "methods": [
+                "GET",
+                "POST",
+                "PUT",
+                "DELETE"
+            ]
+        }
     ]
 }
