--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,15 @@
 {
     "version": 2,
     "builds": [
-      { 
-        "src": "src/main.ts", 
+      {
+        "src": "dist/main.js",
         "use": "@vercel/node"
       }
     ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "dist/main.js"
-        }
+      {
+        "src": "/(.*)",
+        "dest": "dist/main.js"
+      }
     ]
-}
+  }
